# most-discriminative-stimuli

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-tests.yml
controversialstimuli/: regularizers.py
controversialstimuli/analyses/: confusion_matrix.py  model.py
controversialstimuli/clustering/: kmeans.py  split_merge.py
controversialstimuli/models/: clustering_model.py  optimization_clipper.py
controversialstimuli/optimization/: cluster_image_base.py  controversial_objectives.py  pre_and_post_processing_ops.py  stoppers.py  torch_transform_image.py
controversialstimuli/utility/: misc_helpers.py  model_utils.py  plot.py  torch_nn.py
controversialstimuli/utility/retina/: constants.py  mei_analysis.py  model_io.py  plot.py
scripts/: run_kmeans_example.py
tests/optimization/: test_controversial_objectives.py
